# shadcn-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.MD  cli.py  debug_ci.py  docker-compose.yml  main.py  playground.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: test.yml
agents_library/: __init__.py
agents_library/nodes/: email_node.py  search_node.py  translate_node.py
ci/: constraints-3.8.txt
components/: __init__.py
components/nodes/: email_node.py  search_node.py  summarizer_node.py
shadcn_agent/: __init__.py  cli.py  playground.py
templates/nodes/: email_node.py  search_node.py  summarizer_node.py  translate_node.py
templates/workflows/: scrape_and_summarize_graph.py  summarize_and_email_graph.py  translate_and_email_graph.py
tests/: __init__.py  conftest.py  test_cli.py  test_nodes.py  test_workflows.py
