[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadcn-agent"
version = "0.2.0"
authors = [
  { name = "Aryan Bagale", email = "aryanbagale22@gmail.com" }
]
description = "A Shadcn-style CLI for building composable AI agents with LangGraph. Fetch component templates directly from GitHub."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25.0",
    "langgraph>=0.0.1",
    "streamlit>=1.20.0",
    "deep-translator>=1.9.0",
    "beautifulsoup4>=4.9.0",
    "python-dotenv>=0.19.0"
]

[project.urls]
Homepage = "https://github.com/Aryan-Bagale/shadcn-agents"
Repository = "https://github.com/Aryan-Bagale/shadcn-agents"
Issues = "https://github.com/Aryan-Bagale/shadcn-agents/issues"
Documentation = "https://github.com/Aryan-Bagale/shadcn-agents#readme"

[project.scripts]
shadcn-agent = "shadcn_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8"
]

[tool.hatch.build.targets.wheel]
packages = ["shadcn_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/shadcn_agent",
    "/README.md",
    "/LICENSE"
]