[metadata]
name = shadcn-agent
version = 0.2.0

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    docs*

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --tb=short

[coverage:run]
source = shadcn_agent
omit = 
    */tests/*
    */test_*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[flake8]
max-line-length = 127
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist